# MagicTerminal

./: CMakeLists.txt  main.cpp
